fixed styling on tablet size

--- a/src/components/skillBox/SkillBox.module.css
+++ b/src/components/skillBox/SkillBox.module.css
@@ -1,6 +1,7 @@
 /* .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
 } */
 
 .title {
@@ -13,6 +14,7 @@
 .list {
   display: flex;
   flex-direction: column;
+
   gap: 2rem;
 }
 
